# RoxxBuilder

./: .gitignore  Cargo.toml  README.md
benches/: hashmap_array_basestats_bench.rs
configuration/: base.yaml
resource/: StructAndEnumDiagram.drawio  answer_spells_example.json  front_end_request.json  request_breed_example.json  request_spell_example.json  request_spell_levels_dispe_arrow_example.json  request_spell_levels_example.json  request_spell_variants_example.json
resource/data/call_to_api/: first  one_item
src/: lib.rs  main.rs
src/builder/: mod.rs  test_file.rs
src/builder/algorithm_mod/: build_generator.rs  build_iter.rs  build_iter_factory.rs  graph_build_iterator.rs  item_estimator.rs  mod.rs  roxx_build_finder.rs  roxx_builder_graph.rs
src/builder/attack_mod/: attack.rs  damage_calculation.rs  damage_element.rs  damage_line.rs  damage_position.rs  damage_source.rs  mod.rs  spell_info.rs  spell_variant.rs
src/builder/build_mod/: build.rs  build_search_result.rs  damage_eval.rs  mod.rs  player.rs
src/builder/data_mod/: data_container.rs  data_loader.rs  data_manager.rs  mod.rs
src/builder/item_mod/: item.rs  item_condition.rs  item_slot.rs  item_type.rs  mod.rs  set.rs  stats.rs
src/builder/item_mod/base_stat_mod/: base_stat.rs  mod.rs
src/builder/player_mod/: breed.rs  mod.rs  player.rs
src/builder/utils_mod/: utils.rs
src/web/api/: app_state.rs  main.rs  mod.rs
tests/: basic_damage_test.rs  build_gen_test.rs  condition_test.rs  crit_test.rs  data_test.rs  estimator_and_prio_test.rs  reqwest_test.rs  roxx_builder_graph_test.rs  roxx_builder_test.rs  set_test.rs
tests/test_files/conditions/: all_conditions
tests/test_files/containers/: data_container_small  data_container_small_to_read  small_sets_data_container  whole_data_container_to_read
tests/test_files/full_api_calls/: 0  10  100  101  102  103  104  105  106  107  108  109  11  110  111  112  113  114  115  116  117  118  119  12  120  121  122  123  124  125  126  127  128  129  13  130  131  132  133  134  (+328 more)
tests/test_files/small_call_test/: 1
tests/test_files/small_convert_test/: 0  1  2
(+21 files in other folders)
