[package]
name = "roxx_builder"
version = "0.1.0"
edition = "2021"


[dev-dependencies]
plotters = "0.3.2"
criterion = "0.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
strum = "0.24.1"
strum_macros = "0.24.0"
rand = "0.8.5"
string-builder = "0.2.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
actix-rt = "*"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
once_cell = "1.16.0"
lazy_static = "1.4.0"


[[bench]]
name = "hashmap_array_basestats_bench"
harness = false
