[package]
name = "roxx_builder"
version = "0.1.0"
edition = "2021"


[dev-dependencies]
plotters = "0.3.2"
criterion = "0.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive","rc"] }
serde_json = "1.0"
strum = "0.24.1"
strum_macros = "0.24.0"
string-builder = "0.2.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
actix-rt = "*"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
once_cell = "1.16.0"
lazy_static = "1.4.0"
serde-big-array = "0.5.1"
rand = "0.8.5"
actix-web = "4.3.1"
arrayref = "0.3.7"
sorted-vec = "0.8.2"
combinations = "0.1.0"
itertools = "0.9.0"
actix-cors = "0.7"
serde_repr = "0.1.19"

[[bench]]
name = "hashmap_array_basestats_bench"
harness = false

[lib]
doctest = false